--- a/Loan Prediction.ipynb
+++ b/Loan Prediction.ipynb
@@ -1238,6 +1238,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are missing val|ues in Self_Employed. So we look at a frequency table to determine how to best manage those values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No     500\n",
+       "Yes     82\n",
+       "Name: Self_Employed, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['Self_Employed'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A majority of these values are no, approximately 86%, actually. So it is safe to assume the missing values are no."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Self_Employed Values replaced\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train['Self_Employed'].fillna('No', inplace=True)\n",
+    "\n",
+    "# confirmation the code ran\n",
+    "print(\"Self_Employed Values replaced\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
